# minuta

./: .gitignore  AGENT.md  LICENSE  README.md  biome.json  conductor.json  dev.sh  lefthook.yml  minuta-handover.md  package.json  pnpm-lock.yaml  setup.sh  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  claude-review.yml
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src/components/: empty-state.tsx  meeting-list.tsx  meeting-row.tsx  note-preview.tsx  processing-status.tsx  record-button.tsx  recording-card.tsx  recording-timer.test.tsx  recording-timer.tsx  settings-form.tsx  sidebar.tsx  top-bar.tsx
apps/desktop/src/context/: settings-context.tsx
apps/desktop/src/hooks/: use-meeting-flow.ts  use-notes.ts
apps/desktop/src/i18n/: de.json  en.json  index.ts
apps/desktop/src/lib/: tauri-commands.ts
apps/desktop/src/pages/: home.tsx  note-detail.tsx  settings.tsx
apps/mobile/: package.json
apps/web/: package.json
scripts/: sync-docs.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  error.rs  lib.rs  loopback.rs  main.rs  mixer.rs  settings.rs  state.rs  summarize.rs  transcribe.rs  vault.rs
