[package]
name = "minuta"
version = "0.1.0"
edition = "2021"
description = "Local-first AI meeting note taker"
license = "FSL-1.1-Apache-2.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
whisper-rs = "0.16"
reqwest = { version = "0.13", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
hound = "3.5"
thiserror = "2"
dirs = "6"
